--- a/Front/cilent/assets/css/index.css
+++ b/Front/cilent/assets/css/index.css
@@ -1745,7 +1745,7 @@ header .header-info .page-list .pages-pc ul {
 }
 
 
-/* ---------------------- 
+/* ----------------------
 COLLECTION SLIDER - Start
 ------------------------- */
 
@@ -2049,9 +2049,7 @@ TRENDY SLIDER - Start
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 3%;
     width: 100%;
-    height: 100%;
 }
 
 .section.trendy .trendy-sec-head {
@@ -2063,10 +2061,11 @@ TRENDY SLIDER - Start
     justify-content: center;
     gap: 40px;
     list-style: none;
+    margin-top: 2%;
 }
 
 
-.section.trendy .trendy-sec-head .trendy-list a{
+.section.trendy .trendy-sec-head .trendy-list a {
     text-decoration: none;
     color: #292929;
     position: relative;
@@ -2105,20 +2104,168 @@ TRENDY SLIDER - Start
 
 
 /* =========== trendy-product - Start =========== */
+.trendly-area {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    overflow: hidden;
 
-.trendy-product-list{
+}
+
+
+.trendy-product-list {
     display: flex;
     gap: 2%;
-}
-
-
-.trendy-product-list .trendy-product .product-image{
-    min-width: 400px;
-}
-
-.trendy-product-list .trendy-product .product-image img{
     width: 100%;
+    height: 100%;
+    /* transform: translate(-50%); */
 }
+
+
+.trendy-product-list .trendy-product {
+    width: 370px;
+    height: 450px;
+}
+
+
+.trendy-product-list .trendy-product .product-image {
+
+    height: 100%;
+    width: 100%;
+    position: relative;
+    transition: all 0.5s ease;
+
+}
+
+
+
+.trendy-product-list .trendy-product .product-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform-origin: center bottom;
+}
+
+.trendy-product-list .trendy-product .product-image:hover {
+    transform: scaleY(1.02) scaleX(1.05);
+}
+
+
+.trendy-product-list .trendy-product .product-image .prod-img {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+
+
+.trendy-product-list .trendy-product .product-image .prod-add {
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    transform: translate(12%);
+    margin-bottom: 15px;
+
+    display: none;
+    text-align: center;
+    width: 80%;
+    text-decoration: none;
+    color: #000;
+    background: #fff;
+    padding: 3% 12%;
+    transition: all 0.5s ease;
+}
+
+.trendy-product-list .trendy-product .product-image .prod-add.active{
+    
+    display: block;
+}
+
+.trendy-product-list .trendy-product .product-image .prod-add:hover {
+    background-color: #d90000;
+    color: #fff;
+    font-weight: 500;
+}
+
+.trendy-product-list .trendy-product .product-image .prod-add:active {
+    background-color: #9a0101;
+}
+
+
+
+
+
+
+
+
+
+
+.trendy-product-list .trendy-product .product-info {
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+}
+
+
+
+.trendy-product-list .trendy-product .product-info img {
+    width: 25px;
+    transition: all 0.5s ease; 
+}
+
+.trendy-product-list .trendy-product .product-info img:hover {
+    transform: scale(1.15);
+}
+
+.trendy-product-list .trendy-product .product-info img:active {
+    transform: scale(0.9);
+}
+
+.trendy-product-list .trendy-product .product-info .product-name {
+    display: flex;
+    flex-direction: column;
+}
+
+.trendy-product-list .trendy-product .product-info .product-name .prod-cat {
+    text-decoration: none;
+    color: #292929;
+    margin-top: 2%;
+    font-size: 14px;
+}
+
+.trendy-product-list .trendy-product .product-info .product-name .prod-name {
+    text-decoration: none;
+    font-weight: 500;
+    color: #000;
+    margin-top: 0.5%;
+}
+
+
+
+
+.trendy-product-list .trendy-product .product-info .product-name .dis-price {
+    font-size: 16px;
+    font-weight: 600;
+    color: #d90000;
+    margin-top: 5%;
+}
+
+.trendy-product-list .trendy-product .product-info .product-name .sell-price {
+    font-size: 16px;
+    font-weight: 600;
+    color: #000;
+    margin-top: 5%;
+}
+
+.trendy-product-list .trendy-product .product-info .product-name .sel-price {
+    font-size: 12px;
+    font-weight: 500;
+    color: #000;
+}
+
 
 /* =========== trendy-product - End =========== */
 
@@ -2149,25 +2296,17 @@ TRENDY SLIDER - Start
 
 
 
-.trendly-area{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-}
 
 
 
 /* =========== trendy-cricle-btn - Start =========== */
 
-.trendy-cricle-btn{
+.trendy-cricle-btn {
     display: flex;
     align-items: center;
     justify-content: center;
     /* gap: 10px; */
     gap: 14px;
-
-    
 }
 
 .trendy-cricle-btn .cric-btn {
@@ -2175,7 +2314,7 @@ TRENDY SLIDER - Start
     height: 14px; */
     width: 20px;
     height: 20px;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -2357,7 +2496,7 @@ TRENDY SLIDER - End
     }
 
 
-    /* ---------------------- 
+    /* ----------------------
 COLLECTION SLIDER - Start
 ------------------------- */
 
@@ -2467,7 +2606,7 @@ COLLECTION SLIDER - Start
         font-size: 16px;
     }
 
-    .list-two-gift {}
+    /* .list-two-gift {} */
 
 
 
